apps/foundry-vtt-kf/overlays/dev/foundry-vtt-kf_IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-kf-ingress
  namespace: foundry-vtt-kf
spec:
  routes:
    - kind: Rule
      match: Host(`dev-kaiga.sakagegaming.com`)
      services:
        - kind: Service
          name: foundry-vtt-kf
          passHostHeader: true
          port: 80
  # tls:
  #   certResolver: letsencrypt
